--- a/WebformsPOCDemo/CSS/Main.css
+++ b/WebformsPOCDemo/CSS/Main.css
@@ -12,8 +12,12 @@
 .Pages-Wrapper {
     padding: 16px 16px 16px 16px;
     /*height: calc(100% - 32px);*/
-    height:100%;
-    width:100%;
+    /*height:100%;
+    width:100%;*/
+}
+
+.nav-item{
+    text-transform:uppercase;
 }
 
 .header-links a {
@@ -109,6 +113,9 @@
     height: 51px;
 }
 
-
+.Pages-Wrapper .page-title
+{
+    text-transform:uppercase;
+}
 
 
