--- a/WebformsPOCDemo/CSS/Main.css
+++ b/WebformsPOCDemo/CSS/Main.css
@@ -45,7 +45,7 @@
     display: inline-block;
     min-width: 200px;
     text-align: right;
-    padding-right: 6px;
+    padding-right: 8px;
     float: left;
     padding-top: 6px;
 }
@@ -118,4 +118,11 @@
     text-transform:uppercase;
 }
 
+.Form_Group .Form_Control.Read_Only_Panel {
+    padding-top: 6px;
+}
+
+.Form_Group .Form_Control.Read_Only_Panel span {
+    font-weight:bold;
+}
 
