--- a/WebformsPOCDemo/CSS/Main.css
+++ b/WebformsPOCDemo/CSS/Main.css
@@ -126,3 +126,53 @@
     font-weight:bold;
 }
 
+
+/* Tables Style rules + mobile + DarkMode */
+.CustomTable 
+{
+    width: 100%;
+}
+
+.CustomTable > tbody > tr > td {
+    padding: 4px 4px 4px 4px;
+    border: 1px solid #ced4da;
+}
+
+.CustomTable > tbody > tr:first-child {
+    background-color: #0d6efd;
+    color:#fff;
+    font-weight:bold;
+}
+
+.dark-mode .CustomTable > tbody > tr:first-child {
+    background-color: #282828;
+}
+
+.dark-mode .CustomTable > tbody > tr > td {
+    border: 1px solid #404040;
+}
+
+.CustomTable > tbody > tr:first-child td {
+    border: none;
+}
+
+.CustomTable > tbody > tr td:last-child {
+    border-right: none;
+}
+
+@media (max-width:600px)
+{
+    .CustomTable > tbody > tr td:nth-child(n+3) {
+        display: none;
+    }
+
+    .CustomTable > tbody > tr td:last-child {
+        display: table-cell;
+    }
+}
+
+
+
+
+
+
