--- a/WebformsPOCDemo/CSS/Main.css
+++ b/WebformsPOCDemo/CSS/Main.css
@@ -331,3 +331,55 @@
 nav.navbar .form-check-label {
     color: rgba(255, 255, 255, 1);
 }
+
+nav.navbar label 
+{
+    text-transform:uppercase;
+}
+
+div.Loading-Animation {
+    display: none;
+}
+
+body.Loading
+{
+    position:relative;
+}
+
+body.Loading > div.Loading-Animation 
+{
+    display:block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(192,192,192, 0.2);
+}
+
+body.Loading > div.Loading-Animation > .Loading-Image {
+    display: block;
+    position: absolute;
+    width: 256px;
+    height: 256px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 1;
+    margin: auto;
+
+    animation: spin 3s linear infinite;
+}
+
+@keyframes spin {
+    
+    0% 
+    {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
