--- a/WebformsPOCDemo/Site.Master
+++ b/WebformsPOCDemo/Site.Master
@@ -72,5 +72,7 @@
 
     <script src="/JS/darkmode.js" type="text/javascript"></script>
 
+    <div class="Loading-Animation"><img class="Loading-Image" src="/Images/Loading.png" alt="Loading" title="Loading" /></div>
+
 </body>
 </html>
